--- a/src/Login.css
+++ b/src/Login.css
@@ -6,7 +6,7 @@ html {
     height: 100%;
 }
 
-.container {
+#root {
     display: flex;
     flex-direction: column;
     min-height: 100%;
@@ -48,7 +48,7 @@ h1 {
     margin-bottom: 1rem;
 }
 
-input {
+.loginInput {
     width: 100%;
     max-width: 300px;
     padding: 0.5rem;
